--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,14 @@
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
 }
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 
 /*цвет основного текста #212121;
 вторичный цвет текста #757575
@@ -16,23 +24,28 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
-  margin: 0px;
+  background: #ffffff;
+}
+.container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 ul {
   list-style: none;
+}
+.container ul {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-left: 0px;
 }
 a {
   text-decoration: none;
   color: var(--primary-text-color);
 }
 
-h2 {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.7;
-  text-align: center;
-  margin: 0px;
-}
 h3 {
   font-weight: bold;
   font-size: 14px;
@@ -40,127 +53,209 @@ h3 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-
-/*--header--*/
-.hero h1 {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: grey;
+h2 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 50px;
 }
 
+/*--header--*/
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.page-nav {
+  display: flex;
+  align-items: center;
+}
+.nav-contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
 .nav-logo {
   font-family: Raleway, sans-serif;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
   color: var(--accent-color);
+  margin-right: 80px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 .nav-logo span {
   color: var(--primary-text-color);
 }
-.nav-logo:focus {
+.nav-logo :focus {
   color: var(--accent-color);
 }
-.page-nav a:hover,
-.page-nav a:focus {
+.nav-list :hover,
+.nav-list :focus {
   color: var(--accent-color);
 }
-
-.nav-contacts a {
+.nav-list {
+  display: flex;
+}
+.nav-list .link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.nav-list .item:not(:last-child) {
+  margin-right: 50px;
+}
+.nav-contacts {
+  display: flex;
+  align-items: center;
+}
+.nav-contacts .item + .item {
+  margin-left: 30px;
+}
+.nav-contacts .link {
   color: var(--secondary-text-color);
 }
-
-.nav-contacts a:hover,
-.nav-contacts a:focus {
+.nav-contacts .link:hover,
+.nav-contacts .link:focus {
   color: var(--accent-color);
 }
 /*hero*/
-
-.hero a {
+.hero {
+  text-align: center;
+}
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: grey;
+  margin-bottom: 50px;
+}
+.hero-button {
+  display: inline-block;
+  padding: 10px 32px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  letter-spacing: 0.06em;
   color: #ffffff;
   background-color: var(--accent-color);
+  border-radius: 3px;
+  min-width: 200px;
 }
-.hero a:hover,
-.hero a:focus {
+.hero-button:hover,
+.hero-button:focus {
   color: rgb(255, 255, 255);
 }
 
 /*features*/
+
+.list-flex {
+  display: flex;
+  justify-content: space-between;
+}
+.image {
+  padding: 25px 104px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
 .feature-title {
   display: none;
+}
+.features {
+  margin-top: 94px;
+}
+.features-list .list-item {
+  width: 278px;
+}
+.features-list h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.container h2 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  margin-bottom: 50px;
 }
 .features-list p {
   color: var(--secondary-text-color);
   font-weight: 400;
   line-height: 1.7;
+  margin: 0px;
 }
+/*-------work------*/
 
+.features-work {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
 .features-work p {
   text-transform: uppercase;
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
   font-weight: 700;
+  margin: 0px;
+  text-align: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
-.features-work a:hover,
-.features-work a:focus {
+.work-list .list-item {
+  width: 380px;
+}
+.work-list p:hover,
+.work-list p:focus {
   color: var(--accent-color);
 }
 
 /*section-team*/
+
 .section-team {
+  padding-top: 94px;
+  padding-bottom: 94px;
   background-color: #f5f4fa;
 }
-
-.section-team h3 {
+.team-list .list-item {
+  width: 278px;
+}
+.team-container h3 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
   font-size: 16px;
   line-height: 1.19;
 }
-
-.section-team p {
+.team-container p {
+  margin-top: 0px;
+  margin-bottom: 16px;
+  text-align: center;
   font-weight: 400;
   color: var(--secondary-text-color);
   font-size: 16px;
 }
-
-.socials a:hover,
-.socials a:focus {
-  background-color: var(--accent-color);
+.socials {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  margin-left: 35px;
+  margin-right: 35px;
 }
-
-/*section-team*/
-.section-team {
-  background-color: #f5f4fa;
-}
-
-.section-team h3 {
-  font-size: 16px;
-  line-height: 1.19;
-}
-
-.section-team p {
-  font-weight: 400;
-  color: var(--secondary-text-color);
-  font-size: 16px;
-}
-
-.socials li {
-  display: inline;
-}
-
 .socials a:hover,
 .socials a:focus {
   background-color: var(--accent-color);
 }
 
 /*clients*/
+
+.client-list .list-item {
+  width: 175px;
+}
+.section-clients {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
 .section-clients a:hover,
 .section-clients a:focus {
   background-color: var(--accent-color);
@@ -195,9 +290,12 @@ h3 {
 }
 .footer-list-adress {
   color: #ffffff;
+  margin-top: 10px;
 }
 .footer-list-link {
   color: rgba(255, 255, 255, 0.6);
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
 
 .footer h3 {
@@ -214,17 +312,21 @@ h3 {
 .footer-button {
   color: white;
   background-color: var(--accent-color);
+  padding: 10px 45px;
+  border-radius: 3px;
 }
 .footer-form li:hover,
 .footer-form li:focus {
   background-color: var(--accent-color);
 }
+
 .footer .text {
   font-weight: normal;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.4);
+  text-align: center;
 }
 
 /*----------------------------------PORTFOLIO---------------------------------*/
@@ -235,123 +337,66 @@ h3 {
 .list-button li {
   display: inline;
 }
-
-.list-button button {
-  background: #f5f4fa;
-  border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
+.list-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 93px;
+  margin-bottom: 34px;
 }
+.list-button button {
+  border: 0px;
+  font-family: roboto, sans-serif;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.6;
+  padding: 6px 22px;
+  letter-spacing: 0.03em;
+}
+.list-button .list-item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .list-button :hover,
 .list-button :focus {
   background-color: var(--accent-color);
   color: #ffffff;
+  border-radius: 4px;
 }
 
+.content-container {
+  margin-bottom: 94px;
+}
+.list-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.list-content .list-item {
+  width: calc((100% - 60px) / 3);
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+.list-content .list-item:nth-child(3n) {
+  margin-right: 0px;
+}
+.list-content .list-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
 .list-content h2 {
   font-size: 18px;
   line-height: 2;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  text-align: left;
+  padding-left: 24px;
   letter-spacing: 0.06em;
 }
-
 .list-content p {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.9;
   color: var(--secondary-text-color);
-}
-
-/*----------------------Geometry--------------------*/
-.body {
-  width: 1600px;
-  height: 2924px;
-  background: #ffffff;
-}
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: 200px;
-  margin-right: 200px;
-}
-.hero-container {
-  padding: 200px 480px;
-  text-align: center;
-}
-.hero h1 {
-  margin-bottom: 50px;
-  margin-top: 0;
-}
-.container ul {
-  margin-bottom: 0;
-  margin-top: 0;
-  padding-left: 0px;
-}
-/*-----features----------*/
-.features {
-  margin-top: 94px;
-}
-.features-list h3 {
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-.features-list p {
-  margin: 0px;
-}
-.features-work {
-  margin-top: 94px;
-  margin-bottom: 94px;
-}
-.container h2 {
-  margin-bottom: 50px;
-}
-.features-work p {
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-/*-------team---------*/
-.section-team {
-  background-color: #f5f4fa;
-}
-.team-container {
-  padding: 94px 200px;
-}
-.team-container h3 {
-  margin-top: 30px;
-  margin-bottom: 10px;
-}
-.team-container p {
-  margin-top: 0px;
-  margin-bottom: 16px;
-}
-.section-clients {
-  margin-top: 94px;
-  margin-bottom: 94px;
-}
-/*-------footer------*/
-.footer-list-adress {
-  margin-top: 10px;
-}
-.footer-list-link {
-  margin-top: 9px;
-  margin-bottom: 9px;
-}
-.text {
-  text-align: center;
-}
-/*------------------------portfolio geometry---------------------*/
-.button-container .list-button {
-  margin-top: 93px;
-  margin-bottom: 34px;
-  text-align: center;
-  padding: 0px;
-}
-.list-content h2 {
-  margin-top: 20px;
-  margin-bottom: 4px;
-}
-.list-content p {
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-left: 24px;
 }
