--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
   --secondary-text-color: #757575;
 }
 html {
+  background-color: #e5e5e5;
   box-sizing: border-box;
 }
 *,
@@ -25,6 +26,10 @@ html {
   font-weight: 500;
   line-height: 1.14;
   margin: 0px;
+  background-color: rgb(255, 255, 255);
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .container {
   width: 1230px;
@@ -44,6 +49,7 @@ ul {
 a {
   text-decoration: none;
   color: var(--primary-text-color);
+  display: block;
 }
 
 h3 {
@@ -134,6 +140,9 @@ h3 {
   background-color: grey;
   margin: 0px;
   margin-bottom: 50px;
+  width: 646px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-button {
   display: inline-block;
@@ -212,18 +221,25 @@ h3 {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: #f5f4fa;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1600px;
 }
 .team-list .list-item {
   width: 278px;
 }
-.team-container h3 {
-  margin-top: 30px;
+.team-card {
+  background-color: white;
+  padding-top: 30px;
+  padding-bottom: 24px;
+}
+.team-card h3 {
   margin-bottom: 10px;
   text-align: center;
   font-size: 16px;
   line-height: 1.19;
 }
-.team-container p {
+.team-card p {
   margin-top: 0px;
   margin-bottom: 16px;
   text-align: center;
@@ -231,23 +247,30 @@ h3 {
   color: var(--secondary-text-color);
   font-size: 16px;
 }
-.social {
+.team-card .social {
   display: flex;
   justify-content: center;
   justify-content: space-between;
   margin-left: 35px;
   margin-right: 35px;
 }
+
 .social a:hover,
 .social a:focus {
   background-color: var(--accent-color);
 }
-
+.team-list .list-item {
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  overflow: hidden;
+}
 /*clients*/
 
 .client-list .list-item {
   width: 175px;
 }
+
 .section-clients {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -259,7 +282,7 @@ h3 {
 
 /*footer*/
 
-.footer {
+.footer-section {
   background-color: #2f303a;
 }
 .footer-link {
@@ -279,28 +302,31 @@ h3 {
   color: var(--accent-color);
 }
 
-.footer-list {
+.footer-adress {
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  font-style: normal;
 }
-.footer-list-adress {
+.adress {
   color: #ffffff;
   margin-top: 10px;
-}
-.footer-list-link {
-  color: rgba(255, 255, 255, 0.6);
-  margin-top: 9px;
   margin-bottom: 9px;
 }
-.footer-list-tel {
+.mail {
   color: rgba(255, 255, 255, 0.6);
-  margin: 0px;
+  display: block;
+}
+.telephone {
+  display: block;
+  color: rgba(255, 255, 255, 0.6);
+  margin-top: 9px;
   margin-bottom: 28px;
 }
-.footer-container {
+.footer {
   display: flex;
   padding-top: 48px;
+  align-items: baseline;
 }
 .footer-social {
   margin-left: 179px;
@@ -319,11 +345,13 @@ h3 {
   border-radius: 3px;
   background-color: rgba(0, 0, 0, 0);
 }
-.footer h3 {
+.footer b {
+  display: block;
   color: #ffffff;
   font-weight: bold;
   letter-spacing: 0.03em;
   margin-bottom: 21px;
+  text-transform: uppercase;
 }
 .footer-social .list {
   display: flex;
@@ -360,9 +388,11 @@ h3 {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.4);
   text-align: center;
-  margin: 0px;
   padding-bottom: 21px;
   padding-top: 18px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 /*----------------------------------PORTFOLIO---------------------------------*/
